--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="cs">
   <head>
+    <meta name="google-site-verification" content="uZROjWrbRVD1UDwLU-RbF23dykkJ1CuOqQ6S2k4ZoX4" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DrawGuess - Moderní multiplayerová kreslící hra</title>
