--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DrawGuess - Moderní multiplayerová kreslící hra</title>
     <meta name="description" content="Moderní multiplayerová kreslící hra inspirovaná skribbl.io. Kreslíte, hádáte a bavíte se s přáteli online! Vytvořte místnost nebo se připojte k náhodné hře." />
-    <meta name="keywords" content="kreslící hra, multiplayer, online hra, skribbl.io, kreslení, hádání, česká hra, DrawGuess" />
+    <meta name="keywords" content="kreslící hra, multiplayer, online hra, skribbl.io, kreslení, hádání, česká hra, DrawGuess, kreslení, spolupráce, hra, bez reklam" />
     <meta name="author" content="DrawGuess Team" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://drawguess.lovable.app/" />
+    <link rel="canonical" href="https://draw-guess-seven.vercel.app" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -44,7 +44,7 @@
       "@type": "WebApplication",
       "name": "DrawGuess",
       "description": "Moderní multiplayerová kreslící hra inspirovaná skribbl.io",
-      "url": "https://drawguess.lovable.app/",
+      "url": "https://draw-guess-seven.vercel.app",
       "applicationCategory": "Game",
       "operatingSystem": "Any",
       "offers": {
